inter/Tests/Invalid/miscol.intert
packagetype _plain
packagetype _code

package main _plain
	kind K_table table
	kind K_column_of_number column of K_number
	kind K_column_of_colour column of K_colour
	constant C_egtable_col1 K_column_of_number = { 1, 4, 9, 16 }
	constant C_egtable_col2 K_column_of_colour = { I_green, undef, I_red }
	constant C_egtable K_table = { C_egtable_col1, C_egtable_col2, C_complaint }
